--- a/Peon.Web/Peon.Web.csproj
+++ b/Peon.Web/Peon.Web.csproj
@@ -202,6 +202,14 @@
     <Compile Include="Migrations\201604130910562_AddOther.Designer.cs">
       <DependentUpon>201604130910562_AddOther.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604131337098_ChangeDateType.cs" />
+    <Compile Include="Migrations\201604131337098_ChangeDateType.Designer.cs">
+      <DependentUpon>201604131337098_ChangeDateType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604131340033_RemoveChanged.cs" />
+    <Compile Include="Migrations\201604131340033_RemoveChanged.Designer.cs">
+      <DependentUpon>201604131340033_RemoveChanged.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -316,6 +324,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201604130910562_AddOther.resx">
       <DependentUpon>201604130910562_AddOther.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604131337098_ChangeDateType.resx">
+      <DependentUpon>201604131337098_ChangeDateType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604131340033_RemoveChanged.resx">
+      <DependentUpon>201604131340033_RemoveChanged.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
