Map with JSON marker read from server

--- a/Peon.Web/Web.config
+++ b/Peon.Web/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Peon.Web-20160406045035.mdf;Initial Catalog=aspnet-Peon.Web-20160406045035;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ThingDbContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Test.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PeonDbContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Peon.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
