--- a/Peon.Web/Peon.Web.csproj
+++ b/Peon.Web/Peon.Web.csproj
@@ -169,6 +169,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseStationController.cs" />
     <Compile Include="Controllers\ChildThingController.cs" />
     <Compile Include="Controllers\DerivedThingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -214,6 +215,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\PeonDbContext.cs" />
     <Compile Include="Models\TestThing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -227,6 +229,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="marker.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -294,6 +297,13 @@
     <Content Include="Views\ChildThing\Details.cshtml" />
     <Content Include="Views\ChildThing\Edit.cshtml" />
     <Content Include="Views\ChildThing\Index.cshtml" />
+    <Content Include="Views\BaseStation\Create.cshtml" />
+    <Content Include="Views\BaseStation\Delete.cshtml" />
+    <Content Include="Views\BaseStation\Details.cshtml" />
+    <Content Include="Views\BaseStation\Edit.cshtml" />
+    <Content Include="Views\BaseStation\Index.cshtml" />
+    <Content Include="Views\Home\Map.cshtml" />
+    <Content Include="Views\Home\MapWithAjax.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -331,6 +341,24 @@
     <EmbeddedResource Include="Migrations\201604131340033_RemoveChanged.resx">
       <DependentUpon>201604131340033_RemoveChanged.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JollyGood.MVC\JollyGood.MVC.csproj">
+      <Project>{c4bbe351-254e-4e28-abe9-eaa55825f3f1}</Project>
+      <Name>JollyGood.MVC</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JollyGood\JollyGood.csproj">
+      <Project>{020ee904-8759-40b6-8078-1526084291e5}</Project>
+      <Name>JollyGood</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Peon.Game\Peon.Game.csproj">
+      <Project>{1bf40390-908e-4129-8fec-df788a3579a7}</Project>
+      <Name>Peon.Game</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Peon.Maps\Peon.Maps.csproj">
+      <Project>{348e9ab4-ad38-4bfa-a661-dc08789c7b27}</Project>
+      <Name>Peon.Maps</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
