--- a/JollyGood.MVC/JollyGood.MVC.csproj
+++ b/JollyGood.MVC/JollyGood.MVC.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControllerWithJson.cs" />
     <Compile Include="JsonResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
